OTEL tracing added - integration with langfuse
